# codemap

./: .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_local
codemap-ui/: index.html  jsconfig.json  package.json
codemap-ui/src/: App.svelte
codemap-ui/src/components/: CodeSetList.svelte  EditCodeSet.svelte  Footer.svelte  Header.svelte  Input.svelte  Main.svelte  Nav.svelte  Sidebar.svelte
docker/: docker-compose.yml
scripts/: docker_entrypoint
src/: test.db
src/codemap/: __main__.py  adapaters.py  adapters.py  config.py  cyphers.py  entrypoints.py  exceptions.py  logging.conf  models.py  persist.py  schemas.py
src/codemap/api/: __init__.py  depends.py
src/codemap/api/v1/router/: code_router.py
tests/: test_model_to_schema.py
