[tool.poetry]
name = "codemap"
version = "0.1.0"
description = "A tool for managing codesets with an API allowing you to get mappings on the fly"
authors = ["PattyC <patrickcoffey91@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
databases = "^0.6.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
pre-commit = "^2.20.0"
types-SQLAlchemy = "^1.4.53"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
